@@ -1,5 +1,10 @@
 2005-12-13 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* src/GParted_Core.cc: check if file is open before using it.
+	* src/Utils.cc: removed commented include
+
+2005-12-13 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* replaced the inline Utils functions with static functions.
 	  This shaves a few kbytes (24 in fact) off the binary and is a bit
 	  cleaner code-wise (imho).
